Removed API dependency on LinkedList in favor of List. This should improve memory usage (and some performance).